--- a/buildspec_tagging.yml
+++ b/buildspec_tagging.yml
@@ -9,7 +9,7 @@ env:
 phases:
   install:
     commands:
-      - git config --global credential.helper cache
+      - git config --global credential.helper
       - git config --global credential.UseHttpPath true
   build:
     commands:
