add artifacts in buildspec_gem.yml

--- a/buildspec_gem.yml
+++ b/buildspec_gem.yml
@@ -17,6 +17,7 @@ phases:
 artifacts:
   files:
     - buildspec_integration.yml
+    - buildspec_tagging.yml
     - convergdb-*-java.gem
     - src.jar
     - bin/*
